<resources>
    <string name="app_name">UnsplashForMuzei</string>
    <string name="app_label">Unsplash</string>
    <string name="app_description">Photos from Unsplash</string>
    <string name="action_settings">Settings</string>

    <string name="network_preference_cat_title">Network</string>

    <string name="preference_network_key">preference_network</string>
    <string name="preference_network_title">Download Over WiFi Only</string>
    <string name="preference_network_desc">Download photos over WiFi only (recommended)</string>
    <string name="preference_network_summary_on">Background will download over WiFi only</string>
    <string name="preference_network_summary_off">Backgrounds will download over WiFi and Cell Network</string>

    <string name="other_preference_cat_title">Other</string>

    <string name="preference_interval_key">preference_interval</string>

    <string-array name="preference_interval_entries">
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>2 hours</item>
        <item>3 hours</item>
        <item>5 hours</item>
        <item>6 hours</item>
        <item>12 hours</item>
        <item>24 hours</item>
    </string-array>

    <string-array name="preference_interval_values">
        <item>1800000</item>
        <item>3600000</item>
        <item>7200000</item>
        <item>10800000</item>
        <item>18000000</item>
        <item>21600000</item>
        <item>43200000</item>
        <item>86400000</item>
    </string-array>
</resources>
