<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/network_preference_cat_title">
        <CheckBoxPreference
            android:key="@string/preference_network_key"
            android:title="@string/preference_network_title"
            android:summaryOn="@string/preference_network_summary_on"
            android:summaryOff="@string/preference_network_summary_off"
            android:contentDescription="@string/preference_network_desc"
            android:defaultValue="0"
            android:persistent="true"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/other_preference_cat_title">
        <ListPreference
            android:key="@string/preference_interval_key"
            android:title="Update Interval"
            android:summary="%s"
            android:entries="@array/preference_interval_entries"
            android:entryValues="@array/preference_interval_values"
            android:defaultValue="1800000"
            android:persistent="true"/>
    </PreferenceCategory>
</PreferenceScreen>